--- a/SignalRWebUI/Views/ProgressBars/Index.cshtml
+++ b/SignalRWebUI/Views/ProgressBars/Index.cshtml
@@ -33,12 +33,34 @@
                     $("#productpriceavg").text(value5);
                 });
 
+                connection.on("ReceiveTodayTotalPrice", (value12) => {
+                    $("#todaytotalprice").text(value12);
+                });
+
+                connection.on("ReceiveLastOrderPrice", (value13) => {
+                    $("#lastorderprice").text(value13);
+                });
+
                 connection.on("ReceiveTActiveOrderCount", (value2) => {
                     $("#activeordercount").text(value2);
                 });
 
                 connection.on("ReceiveMenuTableCount", (value3) => {
                     $("#menutablecount").text(value3);
+                });
+
+
+                connection.on("ReceiveBookingCount", (value) => {
+                    $("#bookingcount").text(value);
+                });
+
+                connection.on("ReceiveProductCount", (value) => {
+                    $("#productcount").text(value);
+                });
+
+
+                connection.on("ReceiveCategoryCount", (value) => {
+                    $("#categorycount").text(value);
                 });
 
                 connection.on("ReceiveMenuTableCount", (value4) => {
@@ -160,16 +182,14 @@
                                 <p class="fw-bold mt-1">Kasadaki Toplam Tutar</p>
                                 <h4 id="totalmoneycaseamount"><b></b></h4>
                                 <hr />
-
-                               @*  <p class="fw-bold mt-1">Toplam Ürün Fiyatları</p>
-                                <h4 id="###"><b>Buraya entity yazılcak</b></h4>
-                                <hr /> *@
-
                                 <p class="fw-bold mt-1">Ortalama Ürün Fiyatı</p>
                                 <h4 id="productpriceavg"><b></b></h4>
                                 <hr />
+                                <p class="fw-bold mt-1">Bugüne Ait Toplam Kazanç</p>
+                                <h4 id="todaytotalprice"><b></b></h4>
+                                <hr />
                                 <p class="fw-bold mt-1">Son Sipariş Tutarı</p>
-                                <h4>264.00₺</h4>
+                                <h4 id="lastorderprice"><b></b></h4>
 
                                 <a href="/Order/CreateOrder/" class="btn btn-primary btn-full text-left mt-3 mb-3"><i class="la la-plus"></i> Yeni Sipariş</a>
                             </div>
@@ -188,8 +208,8 @@
 
                                 <div class="progress-card" id="totalMenuTableCountProgress"></div>
 
-@*                                 <div class="progress-card" id="ReceiveProductPriceAvgProgress"></div>
- *@
+                      
+
                                 <div class="progress-card" id="ReceiveAvgPriceByHamburgerProgress"></div>
 
                                 <div class="progress-card" id="ReceiveProductCountByCategoryNameDrinkProgress"></div>
@@ -248,7 +268,7 @@
                                     <div class="col-7 d-flex align-items-center">
                                         <div class="numbers">
                                             <p class="card-category">Kategori Sayısı</p>
-                                            <h4 class="card-title">30</h4>
+                                            <h4 class="card-title" id="categorycount"></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -263,7 +283,7 @@
                                     <div class="col-7 d-flex align-items-center">
                                         <div class="numbers">
                                             <p class="card-category">Ürün Sayısı</p>
-                                            <h4 class="card-title">25</h4>
+                                            <h4 class="card-title" id="productcount"></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -278,7 +298,7 @@
                                     <div class="col-7 d-flex align-items-center">
                                         <div class="numbers">
                                             <p class="card-category">Rezervasyon Sayısı</p>
-                                            <h4 class="card-title">146</h4>
+                                            <h4 class="card-title" id="bookingcount"></h4>
                                         </div>
                                     </div>
                                 </div>
