--- a/SignalRWebUI/Views/Default/Index.cshtml
+++ b/SignalRWebUI/Views/Default/Index.cshtml
@@ -4,10 +4,16 @@
     Layout = "~/Views/UILayout/Index.cshtml";
 }
 
-<h1>Index</h1>
-<h1>Index</h1>
-<h1>Index</h1>
-<h1>Index</h1>
-<h1>Index</h1>
-<h1>Index</h1>
+
+@await Component.InvokeAsync("_DefaultSliderComponentPartial")
+
+@await Component.InvokeAsync("_DefaultOfferComponentPartial")
+
+@await Component.InvokeAsync("_DefaultOurMenuComponentPartial")
+
+@await Component.InvokeAsync("_DefaultAboutComponentPartial")
+
+@await Html.PartialAsync("SendMessage.cshtml")
+
+@await Component.InvokeAsync("_DefaultTestimonialComponentPartial")
 
