added basket and coupon codes

--- a/SignalRWebUI/Views/Shared/Components/_MenuNavbarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_MenuNavbarComponentPartial/Default.cshtml
@@ -18,17 +18,17 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav  mx-auto ">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="/Default/Index/">AnaSayfa </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Menu/Index/">Menü</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/Menu/Index/">Menü <span class="sr-only">(current)</span> </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/DefaultAbout/Index/">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/BookATable/Index/">Rezervasyon <span class="sr-only">(current)</span> </a>
+                            <a class="nav-link" href="/BookATable/Index/">Rezervasyon</a>
                         </li>
                     </ul>
                     <div class="user_option">
@@ -94,7 +94,7 @@
                                 <i class="fa fa-search" aria-hidden="true"></i>
                             </button>
                         </form>
-                        <a href="/Menu/Index/" class="order_online">
+                        <a href="" class="order_online">
                             Sipariş
                         </a>
                     </div>
@@ -103,4 +103,4 @@
         </div>
     </header>
     <!-- end header section -->
-  
+</div>
