--- a/SignalRWebUI/Views/Menu/Index.cshtml
+++ b/SignalRWebUI/Views/Menu/Index.cshtml
@@ -128,7 +128,7 @@
 
     <script>
         function showproductid(value, name) {  //Ajax ile tıklanan ürünün id değerini alıyoruz burada
-            var productName = name;
+            var productName = name;  //ürün adı gözükmesi için
             var id = value;
             $.ajax({
                 type: 'POST',
